--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>FreshSense</title>
 </head>
 <body>
@@ -122,6 +122,6 @@ harvest.
   <footer>
     <p>© 2025 My Company. All rights reserved.</p>
   </footer>
-  <script src="./assets/js/script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
